@@ -1,2 +1,6 @@
 <!-- test heading tags containing wiki markup -->
 =='''heading'''==
+
+==#if==
+
+== #if ==
